fix: layout overflow

--- a/src/components/data-management/style.module.css
+++ b/src/components/data-management/style.module.css
@@ -3,4 +3,9 @@
   display: grid;
   grid-template-rows: 1fr 1fr;
   gap: 16px;
+
+  & > div {
+    overflow-y: auto;
+    overflow-x: hidden;
+  }
 }
