--- a/src/components/device-management/style.module.css
+++ b/src/components/device-management/style.module.css
@@ -8,4 +8,8 @@
   display: grid;
   grid-template-rows: 1fr 1fr;
   gap: 16px;
+
+  & > div {
+    overflow: auto;
+  }
 }
