--- a/src/components/farm/components/mound-block/style.module.css
+++ b/src/components/farm/components/mound-block/style.module.css
@@ -7,7 +7,7 @@
   position: static;
 
   &[data-selected='true'] {
-    background: #52c41a !important;
+    background: var(--block-selected-color) !important;
     & > img {
       opacity: 0.7 !important;
     }
