--- a/src/components/task-management/style.module.css
+++ b/src/components/task-management/style.module.css
@@ -5,6 +5,10 @@
   flex-flow: column nowrap;
   gap: 16px;
 
+  & > div {
+    overflow: auto;
+  }
+
   & > div:nth-of-type(2) {
     flex-grow: 1;
   }
