--- a/src/variable.css
+++ b/src/variable.css
@@ -7,6 +7,8 @@
   --app-header-background: #e8eff4;
 
   --ant-card-title-background: #e8eff4;
+
+  --block-selected-color: #52c41a;
 }
 
 .ant-card-head {
